Add version 0.0.2 to changelog

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -2,3 +2,5 @@
 ## 0.0.1
 Release version 0.0.1 2017-04-25
 
+## 0.0.2
+2017-06-12 Reportdirectories will now be automatically created if they do not exist. Please be careful when using variables in the directory name
