Add release batch Add Version to changelog

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,12 +1,19 @@
 # Changelog
 ## 0.0.1
 ### 2017-04-25
-Release version 0.0.1 
+* Release version 0.0.1 
 
 ## 0.0.2
 ###2017-06-12
-Reportdirectories will now be automatically created if they do not exist. Please be careful when using variables in the directory name
+* Reportdirectories will now be automatically created if they do not exist. Please be careful when using variables in the directory name
 
 ## 0.1.0
 ###2017-06-15
-Add dropdown to select report extension. Currently RXLOG and HTML are possible.
+* Add dropdown to select report extension. Currently RXLOG and HTML are possible.
+
+## 0.1.2
+###2018-03-13
+* Skipped 0.1.1 due to internal changes
+* Change the working directory to the outputpath where the *.rxtst file is located
+* Fix issue with report directory path separator (use File.separator), to prevent issues if master node is installed on a unix machine
+* Code cleanup (Remove unused codes to prevent against site effects
